--- a/.github/workflows/testing-demo1.yml
+++ b/.github/workflows/testing-demo1.yml
@@ -21,4 +21,4 @@ jobs:
         with:
           distribution: 'liberica'
           java-version: '21'
-      - run: ./gradlew clean test
+      - run: ./gradlew clean build
