Adds github actions for automatic PRs

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,11 @@ updates:
       - "gradle"
       - "kotlin"
       - "automatic-merge"
+  - package-ecosystem: github-actions
+    directory: "/"
+    schedule:
+      interval: "daily"
+      time: "04:00"
+    open-pull-requests-limit: 100
+    labels:
+      - "automatic-merge"
