--- a/.github/workflows/testing-demo1.yml
+++ b/.github/workflows/testing-demo1.yml
@@ -16,9 +16,9 @@ jobs:
       run:
         working-directory: ./demo1
     steps:
-      - uses: actions/checkout@v4.2.0
+      - uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@2dfa2011c5b2a0f1489bf9e433881c92c1631f88 #v4.3.0
         with:
           distribution: 'liberica'
           java-version: '21'
