--- a/.github/workflows/gradle-wrapper-update.yml
+++ b/.github/workflows/gradle-wrapper-update.yml
@@ -15,4 +15,5 @@ jobs:
 
       - name: Update Gradle Wrapper
         uses: gradle-update/update-gradle-wrapper-action@v2
-        repo-token: ${{secrets.GITHUB_TOKEN}}
+        with:
+          repo-token: ${{secrets.GITHUB_TOKEN}}
