--- a/.github/workflows/gradle-wrapper-update.yml
+++ b/.github/workflows/gradle-wrapper-update.yml
@@ -6,7 +6,8 @@ on:
   workflow_dispatch: {}
 env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
+permissions:
+  contents: write
 
 jobs:
   update-gradle-wrapper:
