--- a/.github/workflows/gradle-wrapper-update.yml
+++ b/.github/workflows/gradle-wrapper-update.yml
@@ -8,6 +8,7 @@ env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 permissions:
   contents: write
+  pull-requests: write
 
 jobs:
   update-gradle-wrapper:
