--- a/.github/workflows/testing-demo1.yml
+++ b/.github/workflows/testing-demo1.yml
@@ -10,7 +10,26 @@ on:
   workflow_dispatch: {}
 
 jobs:
+  check-if-test1-should-run:
+    runs-on: ubuntu-latest
+    outputs:
+      should_run: ${{ steps.watched_paths.outputs.src }}
+    steps:
+      - id: watched_paths
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        with:
+          filters: |
+            src:
+            - demo1/**
+            - build.gradle.kts
+            - settings.gradle.kts
+            - gradle/**
+      - name: write build should run in env
+        run: |
+          echo ${{ steps.watched_paths.outputs.src }}
   test-demo-1:
+    needs: check-if-test1-should-run
+    if: ${{ needs.check-if-test1-should-run.outputs.should_run == 'true' }}
     runs-on: ubuntu-latest
     defaults:
       run:
